# tgif_dashboard_app

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md  mvp.md  protocol.md  roadmap.md  tgif-research.md
docs/research/: activetg.md  caching.md  callsign-api.md  conversation-engine.md  data-model.md  endpoints.md  engineio.md  javascript.md  limitations.md  open-questions.md  security.md  socket-events.md  state-machine.md  statistics.md  talkgroup-directory.md  tgprofile.md  websocket.md
docs/samples/: activetg.html  endpoint-notes.md  talkgroup-stats-30d-top10.json  talkgroup_stats.html  talkgroups.html  togglermenu.js
docs/samples/html/: Lh-Map.html  index.html  lastheard.html  nets-calendar.html  robots.txt  status.html  tgprofile-296.html
docs/samples/js/: datatables.min.js  ip_utils.js  lastheard.js  lh_session_cache.js  pickcountry.js  psw.js  session.js  socket.io.js  spinner.js  tgrequest_bridge_types.js
docs/samples/json/: profile-sample-ids.json  profile-sample-summary.json  talkgroup-directory-summary.json  talkgroup-stats-1d-top5.json  talkgroup-stats-30d-search-texas.json  talkgroup-stats-30d-top5.csv  talkgroup-stats-7d-top5.json  talkgroups-api.csv  talkgroups-api.json
docs/samples/screenshots/: README.md
docs/samples/tgprofile-examples/: tgprofile-31665.html  tgprofile-373.html  tgprofile-52909.html
docs/samples/websocket/: websocket-samples.jsonl  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/ui/: App.tsx  styles.css  useTgifMonitor.ts
(+115 files in other folders)
