[package]
name = "tgif-dashboard-app"
version = "0.1.0"
description = "TGIF Network live monitoring desktop app"
authors = ["Eugene Conrad"]
edition = "2021"

[lib]
name = "tgif_dashboard_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
